# ten-days-of-voice-agents-2025

./: .gitignore  .python-version  README.md  create_daily_branch.sh  daily_workflow.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml  start_app.sh
Day 3/: CHANGES.md  Day 3 Task.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md
Day 7/: .gitignore  README.md
Day 9/: IMPLEMENTATION.md  QUICKSTART.md  README.md
Day 9/backend/: .env.example  pyproject.toml
Day 9/backend/orders/: .gitkeep  order_777f06de.json  order_a7f3eb8f.json  order_b8f704cb.json  order_ee6be4ce.json  order_ef42a13f.json  order_fcd1057f.json  order_fd7fa538.json
Day 9/backend/src/: __init__.py  catalog.py  merchant.py  shopping_agent.py
backend/: .env.example  .gitignore  IMPROV_README.md  anime_adventure_20251129_040049.json  catalog.json  company_data.json  current_order_Dilshad.html  day8_demo.py  fraud_cases.json  game_session_20251129_035547.json  leads.json  notion_config.json  notion_helper.py  order.json  order_Barista cold coffee_20251123_213842.json  order_Customer.json  order_Jimmy_193058.html  order_ORD_20251128_073925.json  order_Then We'Re_170258.html  order_summary.json  orders.json  products.json  pyproject.toml  receipt_demo.html  requirements.txt  setup_notion.py  shared-data  start_all_agents.bat  view_wellness_log.py  wellness_log.example.json  wellness_log.json  wellness_log_example.json  wellness_tasks.json
challenges/: Day 1 Task.md  Day 2 Task.md  Day 3 Task.md  day1-riya.md  day3
day-01/: README.md
day-02/: README.md
(+202 files in other folders)
